--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/boostrap.css">
-    <link rel="stylesheet" href="css/carousel.css" />
+    <link rel="stylesheet" href="css/carousel.css"/>
     <link rel="stylesheet" href="css/style.css">
     <title>Page d'accueil</title>
 </head>
@@ -20,14 +20,14 @@
                     <h1>Anime nft</h1>
                 </div>
                 <input type="checkbox" id="burger">
-                <ul class="list-unstyled d-flex align-items-center gap-4">
+                <ul id="burger-menu-list" class="list-unstyled d-flex align-items-center gap-4">
                     <li><a href="#"><svg width="47" height="47" viewBox="0 0 47 47" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M13.6232 47C12.3744 47 11.3057 46.5402 10.4172 45.6206C9.52715 44.6994 9.08213 43.5925 9.08213 42.3C9.08213 41.0075 9.52715 39.9007 10.4172 38.9795C11.3057 38.0598 12.3744 37.6 13.6232 37.6C14.872 37.6 15.9406 38.0598 16.8292 38.9795C17.7192 39.9007 18.1643 41.0075 18.1643 42.3C18.1643 43.5925 17.7192 44.6994 16.8292 45.6206C15.9406 46.5402 14.872 47 13.6232 47ZM36.3285 47C35.0797 47 34.011 46.5402 33.1225 45.6206C32.2325 44.6994 31.7874 43.5925 31.7874 42.3C31.7874 41.0075 32.2325 39.9007 33.1225 38.9795C34.011 38.0598 35.0797 37.6 36.3285 37.6C37.5773 37.6 38.6467 38.0598 39.5368 38.9795C40.4253 39.9007 40.8696 41.0075 40.8696 42.3C40.8696 43.5925 40.4253 44.6994 39.5368 45.6206C38.6467 46.5402 37.5773 47 36.3285 47ZM11.6932 9.4L17.1425 21.15H33.0362L39.2802 9.4H11.6932ZM5.96014 35.25L12.715 22.56L4.54106 4.7H0V0H7.37923L9.53623 4.7H47L35.7041 25.85H16.1208L13.6232 30.55H40.8696V35.25H5.96014Z"
                                     fill="currentColor" />
                             </svg>
-                        </a></li>
+                        </a><span>kart</span></li>
 
                     <li><a href="#"><svg width="47" height="47" viewBox="0 0 47 47" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -35,14 +35,14 @@
                                     d="M41.7778 11.1905H36.5556C36.5556 4.92381 30.8111 0 23.5 0C16.1889 0 10.4444 4.92381 10.4444 11.1905H5.22222C2.35 11.1905 0 13.2048 0 15.6667V42.5238C0 44.9857 2.35 47 5.22222 47H41.7778C44.65 47 47 44.9857 47 42.5238V15.6667C47 13.2048 44.65 11.1905 41.7778 11.1905ZM23.5 4.47619C27.9389 4.47619 31.3333 7.38571 31.3333 11.1905H15.6667C15.6667 7.38571 19.0611 4.47619 23.5 4.47619ZM41.7778 42.5238H5.22222V15.6667H41.7778V42.5238ZM23.5 24.619C19.0611 24.619 15.6667 21.7095 15.6667 17.9048H10.4444C10.4444 24.1714 16.1889 29.0952 23.5 29.0952C30.8111 29.0952 36.5556 24.1714 36.5556 17.9048H31.3333C31.3333 21.7095 27.9389 24.619 23.5 24.619Z"
                                     fill="currentColor" />
                             </svg>
-                        </a></li>
+                        </a><span>Marketplace</span> </li>
                     <li><a href="#"><svg width="44" height="44" viewBox="0 0 47 47" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M4.68095 39.0711V41.3638H45.9492V45.9492H0.0955811V0.09552H4.68095V34.4858C11.559 34.4858 18.437 29.9004 23.2517 21.6467C30.1297 10.1833 37.6956 4.68089 45.9492 4.68089V9.26625C39.5297 9.26625 33.3395 14.0809 27.3785 24.1687C21.4175 33.5687 13.1639 39.0711 4.68095 39.0711Z"
                                     fill="currentColor" />
                             </svg>
-                        </a></li>
+                        </a><span>Dashboard</span></li>
                     <li><a href="#"><svg width="47" height="47" viewBox="0 0 47 47" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -52,11 +52,11 @@
                                     d="M23.5 0C10.5216 0 0 10.5216 0 23.5C0 36.4784 10.5216 47 23.5 47C36.4784 47 47 36.4784 47 23.5C47 10.5216 36.4784 0 23.5 0ZM4.27273 23.5C4.27273 27.965 5.79595 32.0754 8.34891 35.3397C10.1418 32.9852 12.4548 31.0771 15.1072 29.7645C17.7595 28.4518 20.6795 27.7702 23.6389 27.7727C26.56 27.77 29.4432 28.434 32.0688 29.7142C34.6944 30.9945 36.9932 32.8571 38.79 35.1603C40.641 32.7325 41.8873 29.8989 42.4258 26.8938C42.9643 23.8887 42.7795 20.7986 41.8866 17.8792C40.9937 14.9597 39.4185 12.2949 37.2913 10.1051C35.164 7.91529 32.5459 6.26352 29.6535 5.28645C26.7612 4.30938 23.6777 4.0351 20.6583 4.48631C17.6389 4.93751 14.7704 6.10122 12.29 7.88116C9.80964 9.6611 7.78878 12.0061 6.39463 14.7221C5.00047 17.4381 4.27311 20.4471 4.27273 23.5ZM23.5 42.7273C19.0862 42.7339 14.8056 41.2155 11.3825 38.4289C12.7604 36.4565 14.5942 34.8461 16.7281 33.7346C18.8621 32.6232 21.2329 32.0437 23.6389 32.0455C26.0148 32.0436 28.357 32.6085 30.4708 33.6935C32.5846 34.7785 34.4091 36.3521 35.7926 38.2836C32.343 41.1607 27.9919 42.7336 23.5 42.7273Z"
                                     fill="currentColor" />
                             </svg>
-                        </a></li>
+                        </a><span>profile</span></li>
                 </ul>
             </div>
         </nav>
-
+<div id="header-section">
         <div class="container">
             <div class="blur"></div>
             <div class="blur"></div>
@@ -73,6 +73,7 @@
                 <p class="anim-txt"></p>
             </div>
         </div>
+    </div>
         <img id="flèche" src="img/flèche_bas.svg" alt="flèche vers le bas">
     </header>
     <main>
