add title + description

--- a/market.html
+++ b/market.html
@@ -62,6 +62,21 @@
   <section id="carte">
     <div class="container">
 
+      <section>
+        <h1>
+          Disvover the best Anime NFT's
+        </h1>
+        <p>
+          Have a look to our collection of NFT's and buy your favorite one.
+        </p>
+        <h2>
+          How does it work ?
+        </h2>
+        <p>
+          
+        </p>
+      </section>
+
       <ul class="list-unstyled  row justify-content-center align-items-center gap-5 ">
         <li class="boxs row col-12 col-lg-3  ">
           <div class="m-0">
