--- a/market.html
+++ b/market.html
@@ -62,19 +62,29 @@
   <section id="carte">
     <div class="container">
 
-      <section>
-        <h1>
+      <section class="my-5 ">
+        <h1 class="text-center mb-4">
           Disvover the best Anime NFT's
         </h1>
-        <p>
+        <p class="text-center">
           Have a look to our collection of NFT's and buy your favorite one.
         </p>
-        <h2>
+        <h2 class="mt-5">
+          What it is a NFT ?
+        </h2>
+        <p class="mt-3">
+          NFT means Non-Fungible Token. It is a unique digital asset that represents ownership of 
+          a specific item or piece of content, such as art, music, or collectibles, on a blockchain. 
+        </p>
+        <h2 class="mt-5">
           How does it work ?
         </h2>
-        <p>
-          
+        <p class="mt-3">
+          Choose the NFT you like and add it to your cart. Then, you can pay with your crypto wallet. 
+          After that, you will be able to see your NFT in your profile.
         </p>
+
+
       </section>
 
       <ul class="list-unstyled  row justify-content-center align-items-center gap-5 ">
