ajout des textes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/boostrap.css">
-    <link rel="stylesheet" href="css/carousel.css"/>
+    <link rel="stylesheet" href="css/carousel.css" />
     <link rel="stylesheet" href="css/style.css">
     <title>Page d'accueil</title>
 </head>
@@ -56,25 +56,25 @@
                 </ul>
             </div>
         </nav>
-<div id="header-section">
-        <div class="container">
-            <div class="blur"></div>
-            <div class="blur"></div>
-            <div class="blur"></div>
-            <div class="blur"></div>
-            <div class="blur"></div>
-            <div class="blur"></div>
-            <div class="blur"></div>
+        <div id="header-section">
+            <div class="container">
+                <div class="blur"></div>
+                <div class="blur"></div>
+                <div class="blur"></div>
+                <div class="blur"></div>
+                <div class="blur"></div>
+                <div class="blur"></div>
+                <div class="blur"></div>
 
 
-            <div id="text-header">
-                <p class="anim-txt"></p>
-                <p class="anim-txt"></p>
-                <p class="anim-txt"></p>
+                <div id="text-header">
+                    <p class="anim-txt"></p>
+                    <p class="anim-txt"></p>
+                    <p class="anim-txt"></p>
+                </div>
             </div>
         </div>
-    </div>
-        <img id="flèche" src="img/flèche_bas.svg" alt="flèche vers le bas">
+        <img id="flèche" class="bounce-animation" src="img/flèche_bas.svg" alt="flèche vers le bas">
     </header>
     <main>
         <section id="populaires" class="container">
@@ -87,16 +87,12 @@
         <section id="description" class="container">
             <h2>What's an NFT ?</h2>
             <article>
-                <p class="boxs p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, ducimus in? Sequi cumque sint maxime
-                    distinctio nam? Est veritatis tempore nisi modi facere dolorum maxime, officiis commodi,
-                    perspiciatis pariatur expedita?</p>
+                <p class="boxs p-5">NFTs (Non-Fungible Tokens) are unique digital assets stored on the blockchain that prove ownership of exclusive content. In our case, each NFT represents a rare anime-inspired creation — from original characters to limited-edition artwork. Unlike regular images or videos, NFTs can’t be copied or replaced, making them true collectibles in the digital world. They give fans the chance to own a piece of the anime universe in a totally new way.</p>
             </article>
             <h2>Our project</h2>
             <article>
 
-                <p class="boxs p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, ducimus in? Sequi cumque sint maxime
-                    distinctio nam? Est veritatis tempore nisi modi facere dolorum maxime, officiis commodi,
-                    perspiciatis pariatur expedita?</p>
+                <p class="boxs p-5">Our platform is dedicated to anime lovers and digital collectors. We create and sell unique anime-themed NFTs — from original artwork to limited-edition character drops — all backed by blockchain technology. Whether you're a long-time anime fan or a curious newcomer, our project offers you the chance to own exclusive pieces of the anime world. Join our community and start building your personal collection of rare, beautifully crafted NFTs.</p>
             </article>
         </section>
         <section id="team" class="container">
@@ -126,13 +122,13 @@
     </main>
     <footer>
         <div class="container">
-        <ul class="list-unstyled row justify-content-center align-items-center">
-            <li class="col-1"><i class="fa-brands fa-instagram"></i></li>
-            <li class="col-1"><i class="fa-brands fa-github"></i></li>
-            <li class="col-1"><i class="fa-brands fa-linkedin-in"></i></li>
-        </ul>
-        <p class="text-center">2022 © MB</p>
-    </div>
+            <ul class="list-unstyled row justify-content-center align-items-center">
+                <li class="col-1"><i class="fa-brands fa-instagram"></i></li>
+                <li class="col-1"><i class="fa-brands fa-github"></i></li>
+                <li class="col-1"><i class="fa-brands fa-linkedin-in"></i></li>
+            </ul>
+            <p class="text-center">2025 © MB</p>
+        </div>
     </footer>
     <script src="Js/script.js"></script>
     <script src="Js/carousel.js"></script>
