modif header hieght

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="position-relative">
+    <header class="position-relative landing_page_header v">
         <nav class="mb-5">
             <div class="container  d-flex justify-content-between align-items-center ">
                 <div class="d-flex align-items-center"> <img src="img/my-logo.svg" alt="logo">
