update market header

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <header class="position-relative">
         <nav class="mb-5">
             <div class="container  d-flex justify-content-between align-items-center ">
-                <div class="d-flex align-items-center"> <img src="img/my-logo.svg" alt="logo">
+                <a href="#" class="d-flex align-items-center"> 
+                    <img src="img/my-logo.svg" alt="logo">
                     <h1>Anime nft</h1>
-                </div>
+                </a>
                 <input type="checkbox" id="burger">
                 <ul id="burger-menu-list" class="list-unstyled d-flex align-items-center gap-4">
-                    <li><a href="#"><svg width="47" height="47" viewBox="0 0 47 47" fill="none"
+                    <li><a href="market.html"><svg width="47" height="47" viewBox="0 0 47 47" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M13.6232 47C12.3744 47 11.3057 46.5402 10.4172 45.6206C9.52715 44.6994 9.08213 43.5925 9.08213 42.3C9.08213 41.0075 9.52715 39.9007 10.4172 38.9795C11.3057 38.0598 12.3744 37.6 13.6232 37.6C14.872 37.6 15.9406 38.0598 16.8292 38.9795C17.7192 39.9007 18.1643 41.0075 18.1643 42.3C18.1643 43.5925 17.7192 44.6994 16.8292 45.6206C15.9406 46.5402 14.872 47 13.6232 47ZM36.3285 47C35.0797 47 34.011 46.5402 33.1225 45.6206C32.2325 44.6994 31.7874 43.5925 31.7874 42.3C31.7874 41.0075 32.2325 39.9007 33.1225 38.9795C34.011 38.0598 35.0797 37.6 36.3285 37.6C37.5773 37.6 38.6467 38.0598 39.5368 38.9795C40.4253 39.9007 40.8696 41.0075 40.8696 42.3C40.8696 43.5925 40.4253 44.6994 39.5368 45.6206C38.6467 46.5402 37.5773 47 36.3285 47ZM11.6932 9.4L17.1425 21.15H33.0362L39.2802 9.4H11.6932ZM5.96014 35.25L12.715 22.56L4.54106 4.7H0V0H7.37923L9.53623 4.7H47L35.7041 25.85H16.1208L13.6232 30.55H40.8696V35.25H5.96014Z"
